crates/piccle-validate/tests/snapshots/snapshots__spatial-multi-effect-output-end-out-of-range.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
semantic semantic.output_end_out_of_range $.spatial_effects[1].feedback
