crates/piccle-validate/tests/snapshots/snapshots__spatial-reverb-missing-field.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.required $.spatial_effects[0].amount
