crates/piccle-validate/tests/snapshots/snapshots__spatial-reverb-soften-out-of-range.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.minimum $.spatial_effects[0].soften_hz
