crates/piccle-validate/tests/snapshots/snapshots__success.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: document
---
Document {
    name: Some(
        "Success",
    ),
    description: Some(
        "Three rising sine tones with a short reverb — the classic 'done!' confirmation.",
    ),
    duration_ms: 420,
    master_volume_level: 1.0,
    reverb: Some(
        Reverb {
            amount: 0.2,
            tail_ms: 250,
            soften_hz: 5000.0,
        },
    ),
    layers: [
        Layer {
            id: "note1",
            start_ms: 0,
            duration_ms: 300,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 523.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 2,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 60,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 40,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.08,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
        Layer {
            id: "note2",
            start_ms: 60,
            duration_ms: 300,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 659.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 2,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 60,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 40,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.08,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
        Layer {
            id: "note3",
            start_ms: 120,
            duration_ms: 300,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 784.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 2,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 60,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 40,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.08,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
    ],
}
