crates/piccle-validate/tests/snapshots/snapshots__time-above-safe-integer.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.maximum $.duration_ms
