crates/piccle-validate/tests/snapshots/snapshots__toggle-off.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: document
---
Document {
    name: Some(
        "Toggle Off",
    ),
    description: Some(
        "A soft falling tone with a tiny noise tick underneath — for toggles switching off.",
    ),
    duration_ms: 150,
    master_volume_level: 1.0,
    spatial_effects: [],
    layers: [
        Layer {
            id: "tone",
            start_ms: 0,
            duration_ms: 150,
            source: Tone(
                ToneSource {
                    wave: Sine,
                    frequencies: [
                        ContourEntry {
                            target: 800.0,
                            hold_ms: 0,
                            transition_ms: 100,
                            transition_curve: Linear,
                        },
                        ContourEntry {
                            target: 400.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    offset_cents: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 2,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 10,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.5,
                        hold_ms: 0,
                        transition_ms: 30,
                        transition_curve: Exponential,
                    },
                    ContourEntry {
                        target: 0.15,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [],
        },
        Layer {
            id: "tick",
            start_ms: 0,
            duration_ms: 30,
            source: Noise(
                NoiseSource {
                    character: Neutral,
                    seed: 0,
                },
            ),
            volume: VolumeContour {
                fade_in: FadeStage {
                    ms: 0,
                    curve: Linear,
                },
                fade_out: FadeStage {
                    ms: 5,
                    curve: Linear,
                },
                levels: [
                    ContourEntry {
                        target: 0.3,
                        hold_ms: 0,
                        transition_ms: 0,
                        transition_curve: Linear,
                    },
                ],
            },
            balance: 0.0,
            filters: [
                Filter {
                    filter_type: Highpass,
                    frequencies: [
                        ContourEntry {
                            target: 4000.0,
                            hold_ms: 0,
                            transition_ms: 0,
                            transition_curve: Linear,
                        },
                    ],
                    resonance: 0.0,
                },
            ],
        },
    ],
}
