crates/piccle-validate/tests/snapshots/snapshots__unknown-enum.snap
---
source: crates/piccle-validate/tests/snapshots.rs
expression: "format!(\"{} {} {}\", error.stage(), error.code(), error.path())"
---
schema schema.enum $.layers[0].source.wave
